# GraphCuts

./: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  energy.h  example.cpp
